fix(gtk320: toolbar): imagebutton spacing to make it square

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -36,7 +36,9 @@
 
         &.text-button { padding: $spacing; }
 
-        &.image-button { padding: $spacing; }
+        &.image-button {
+            padding: $spacing $spacing + 8px;
+        }
     }
 
     separator {
